Added feature-management and oracle-jdbc