@@ -18,6 +18,8 @@
     <properties>
         <revision>0.0.1-SNAPSHOT</revision>
         <java.version>21</java.version>
+        <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
+        <argLine>--enable-preview</argLine>
         <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
     </properties>
 
@@ -31,6 +33,8 @@
         <module>structured-logging</module>
         <module>http-clients</module>
         <module>spring-libs</module>
+        <module>oracle-jdbc</module>
+        <module>feature-management</module>
     </modules>
 
     <build>
